[package]
name = "mitty-terminal"
version = "0.1.0"
authors = ["Neon."]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mitty-terminal"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
embedded-svc = "0.28.0"
toml-cfg = "0.2.0"
st7735-lcd = "0.10.0"
esp-idf-hal = "0.44.1"
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
